# -IS-2022-2_Sem

./: App.cpp  App.h  Array.cpp  BaseCObject.h  CMakeLists.txt  DZ4.docx  EquilateralTriangle.cpp  IPrintable.h  LR7.docx  OperatorsOfMatrix.h  Parallelogram.cpp  README.md  dz1 (1).docx  dz3.docx  lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx  main.cpp  realisation.cpp  test.cpp  tracing.html  writeFileStream.cpp  writeFileStream.h  КАК РАБОТАЕТ ПРОЦЕССОР.docx
MihinatorsCube/: CMakeLists.txt  components.cpp  components.h  cube.cpp  cube.h  main.cpp
Service/: Array.cpp  Array.h  OperatorsOfMatrix.cpp  OperatorsOfMatrix.h
lab1/: announce.h  lab1.cpp  realisation.cpp
lab2/: consoleService.cpp  consoleService.h  functions.h  lab2.cpp  main.cpp  writeFileStream.cpp  writeFileStream.h
lab3/: OperatorsOfMatrix.cpp
lab3/progLab3/: CMakeLists.txt  main.cpp
lab4/: CVector2D.h  DialogInitiable.h  EquilateralTriangle.h  IGeoFig.h  IPhysObject.h  Parallelogram.cpp  Parallelogram.h
progLab3/: main.cpp
progLab3/src/: App.cpp  App.h
progLab4/: App.cpp  App.h  main.cpp
progLab4/Services/: BaseCObject.h  CVector2D.h  DialogInitiable.h  EquilateralTriangle.cpp  EquilateralTriangle.h  IGeoFig.h  IPhysObject.h  IPrintable.h  ObjectsCreation.cpp  Parallelogram.cpp  Parallelogram.h
progLab5/: App.cpp  App.h  Pair.cpp  Pair.h  Queue.cpp  Queue.h  QueueExceptions.cpp  QueueExceptions.h  main.cpp
progLab6/: Algorithms.cpp  Algorithms.h  App.cpp  App.h  main.cpp  myForwardIterator.h
progLab7/: CircularBuffer.hpp  MyIterator.hpp
src/: App.cpp
(+9 files in other folders)
